fix some spacing

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ code {
 		monospace;
 }
 
-#blue {
-	color: red;
+#blur {
+	color: transparent;
+	font-weight: bold;
+	text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.849);
+}
+
+#blur:hover {
+	color: black;
+	font-weight: normal;
+	text-shadow: 0px 0px 0px rgba(255, 255, 255, 1);
 }
